<?xml version="1.0"?>
<package format="2">
  <name>um6</name>
  <version>1.1.2</version>
  <description>The um6 package provides a C++ implementation of the CH Robotics serial protocol, and a
    corresponding ROS node for publishing standard ROS orientation topics from a UM6.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/um6</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>serial</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslint</test_depend>
</package>
